--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ dtw_python==1.1.12
 gldpy==0.2
 h5py==3.6.0
 matplotlib==3.1.2
+netCDF4==1.6.2
 numpy==1.17.4
-pandas==0.25.3
-ray==1.12.0
-scikit_learn==1.1.2
+PySide6==6.4.1
+PySimpleGUI==4.60.4
+rpy2==3.5.5
+scikit_learn==1.2.0
 tensorflow==2.7.0
 xarray==0.20.2
