Code for adding embedding method: parcorr

--- a/djensemble.config
+++ b/djensemble.config
@@ -18,3 +18,4 @@ predictive_length           $ 1
 
 # Online step behavior Configurations
 series_clustering_behavior  $ query    # options: global or query
+embedding_method            $ parcorr
