--- a/experiment-metadata/djensemble-exp1.config
+++ b/experiment-metadata/djensemble-exp1.config
@@ -18,3 +18,4 @@ predictive_length           $ 1
 
 # Online step behavior Configurations
 series_clustering_behavior  $ query    # options: global or query
+embedding_method            $ parcorr
