Pushing experiment 3 - Model Training

--- a/experiment-metadata/exp3-clustering-rain-radar-france.config
+++ b/experiment-metadata/exp3-clustering-rain-radar-france.config
@@ -2,9 +2,9 @@
 query_directory             $ queries/
 convolutional_models_path   $ models/spatio-temporal
 temporal_models_path        $ models/temporal
-dataset_path                $ /home/anderson/Programacao/DJEnsemble/Stream-DJEnsemble/datasets/CFSR-2014.nc
-ds_name                     $ CFSR-2014.nc
-target_attribute            $ TMP_L100
+dataset_path                $ /home/anderson/Programacao/DJEnsemble/Stream-DJEnsemble/datasets/radar-2016-0to17275.npy
+ds_name                     $ radar-2016-0to17275
+target_attribute            $ rain
 clustering_algorithm        $ birch
 
 # Offline step Configuration
