Pushing experiment 3 - Saving Models CEF

--- a/experiment-metadata/djensemble-exp3-cfsr-cfg2.config
+++ b/experiment-metadata/djensemble-exp3-cfsr-cfg2.config
@@ -22,4 +22,5 @@ series_clustering_behavior     $ local    # options: global or local
 global_embedding_method        $ parcorr
 global_tiling_method           $ quadtree
 global_min_tiling_purity_rate  $ 0.9
-
+load_global_clustering_from_file $ s
+update_models_cef              $ n
