--- a/experiment-metadata/djensemble-exp3-cfsr-cfg1.config
+++ b/experiment-metadata/djensemble-exp3-cfsr-cfg1.config
@@ -19,7 +19,8 @@ predictive_length           $ 1
 # Online step behavior Configurations
 clusterization_mode            $ static
 series_clustering_behavior     $ global    # options: global or local
-global_embedding_method        $ gld
+global_embedding_method        $ parcorr
 global_tiling_method           $ yolo
 global_min_tiling_purity_rate  $ 0.9
-
+load_global_clustering_from_file $ s
+update_models_cef              $ n
