Pushing experiment 3 - Changes on Learning Function

--- a/experiment-metadata/djensemble-exp3-cfsr-cfg1.config
+++ b/experiment-metadata/djensemble-exp3-cfsr-cfg1.config
@@ -1,7 +1,7 @@
 #Modules Configuration
-query_directory             $ queries/exp3/
-convolutional_models_path   $ models/spatio-temporal/cfsr/
-temporal_models_path        $ models/temporal/cfsr/
+query_directory             $ queries/exp3/query2/
+convolutional_models_path   $ models/spatio-temporal/cfsr-all/
+temporal_models_path        $ models/temporal/cfsr-all/
 dataset_path                $ datasets/CFSR-2014.nc
 target_attribute            $ TMP_L100 #Without quotes
 clustering_algorithm        $ birch
