--- a/experiment-metadata/djensemble-exp1.config
+++ b/experiment-metadata/djensemble-exp1.config
@@ -17,5 +17,13 @@ window_size                 $ 12
 predictive_length           $ 1
 
 # Online step behavior Configurations
-series_clustering_behavior  $ query    # options: global or query
-embedding_method            $ parcorr
+clusterization_mode            $ static
+global_tiling_method           $ yolo
+global_min_tiling_purity_rate  $ 0.9
+load_global_clustering_from_file $ s
+update_models_cef              $ n
+series_clustering_behavior  $ global    # options: global or query
+global_embedding_method     $ gld
+
+
+
