Pushing several adjustments

--- a/experiment-metadata/djensemble-exp1.config
+++ b/experiment-metadata/djensemble-exp1.config
@@ -1,7 +1,7 @@
 #Modules Configuration
 query_directory             $ queries/
-convolutional_models_path   $ models/spatio-temporal
-temporal_models_path        $ models/temporal
+convolutional_models_path   $ models/spatio-temporal/cfsr-all/
+temporal_models_path        $ models/temporal/cfsr-all/
 dataset_path                $ datasets/CFSR-2015.nc
 target_attribute            $ TMP_L100
 clustering_algorithm        $ birch
